# alude-todo

./: README.md  docker-compose.yml
client/: .env.example  Dockerfile  craco.config.js  package.json
client/public/: index.html
client/src/: App.tsx  index.css  index.tsx  router.tsx
client/src/components/EditableText/: index.tsx
client/src/components/TaskCard/: SubtaskRow.tsx  index.tsx
client/src/components/UserArea/: index.tsx
client/src/config/: AntDesignConfig.tsx
client/src/models/: AuthStore.ts  Store.ts  Subtask.ts  Task.ts  TodoStore.ts  User.ts  customTypes.ts
client/src/pages/Auth/: index.tsx
client/src/pages/Home/: Home.css  index.tsx
client/src/util/: api.ts
client/src/utils/: api.ts
database/: .env.example
database/changelog/: changelog.xml
database/changelog/migrations/: 2025-02-13-migracao-inicial.xml  2025-02-17-criando-sessao.xml
server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
server/app/: main.py
server/app/config/: cors.py  database.py  errors.py  logs.py  routes.py  session.py
server/app/modules/: __init__.py
server/app/modules/auth/: auth_model.py  auth_route.py  auth_service.py
server/app/modules/subtask/: subtask_model.py  subtask_route.py  subtask_service.py
server/app/modules/task/: task_model.py  task_route.py  task_service.py
server/app/modules/user/: user_model.py  user_route.py  user_service.py
server/app/utils/: auth.py  database.py  exceptions.py  middlewares.py
