[tool.poetry]
name = "alude-todo-server"
version = "0.1.0"
description = "Alude's welcome project server"
authors = ["Gabriel de Paula"]
license = "Unlicense"

[tool.poetry.dependencies]
python = ">=3.10"
quart = ">=0.20.0,<0.21.0"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"